--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             
             <div class="content-section">
                 <h1>Kat Karşılığı İnşaat Projesi</h1>
-                <p><strong>Date:</strong> 10/10/2024</p>
+                <p><strong>Tarih:</strong> 10/10/2024</p>
             </div>
 
             <div class="content-section">
