--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
             <div class="content-section">
                 <h2>Proje Teklifi ve Kat İrtifakı Modeli</h2>
-                <p>Proje kapsamında 16 adet daire inşa edilecek olup, dairelerin paylaşımı %50 Arsa Sahipleri ve %50 Müteahhit arasında olacaktır.</p>
+                <p>Proje kapsamında 16 adet daire inşa edilmesi öneriliyor, dairelerin paylaşımı %50 Arsa Sahipleri ve %50 Müteahhit arasında olacaktır.</p>
                 <ul>
                     <li><strong>Zemin Kat (Kot):</strong> 4 adet 1+1 daire
                         <ul>
